<resources>
    <string name="app_name">NCCAA</string>

    <string name="condition_text">Welcome to the NCCAA website located at <a href='http://www.nccaa.org'>www.nccaa.org</a> (the “Site”). In these Terms of Use, the terms “we,” “us,” or “our” refer to NCCAA, and the terms “you” and “your” refer to you as a visitor to the Site. These Terms of Use constitute a binding legal contract between you and us and set forth the terms that govern your access to and use of the Site. When using the Site, you may be subject to other posted guidelines, rules or agreements applicable to certain features or areas of the Site, or to certain application processes that may be initiated via our site (such as membership and certification applications). All such guidelines, rules and agreements are part of these Terms of Use. Accessing the Site in any manner, even through automated means, constitutes your use of the Site and your agreement to be bound by these Terms of Use.We reserve the right to modify these Terms of Use in the future as we deem necessary. If we do modify these Terms of Use, we will post the updated Terms of Use on this Site and change the “Last Updated” date above to reflect the date of the changes. By continuing to use the Site after we post any such changes, you accept the Terms of Use as modified.</string>
    <string name="condition_text2">We respect the privacy of the users of our Site. Please take a moment to review our Privacy Policy.</string>
    <string name="condition_text3"><b>License Grant.</b> We may provide via the Site information, data, text, images and other materials created by us or our licensors or uploaded to the Site by our members, other users and/or third party partners (the “Content”). The Content available through this Site is our property or the property of our members, other users, third party partners and/or licensors, and is protected by state, national and international copyright, trademark and other intellectual property laws. Unless otherwise specified or authorized by us, the Site is intended for your personal, noncommercial use only. You may not modify, copy, reproduce, republish, upload, post, transmit or distribute in any way any Content from the Site without our authorization. If you download material from the Site for your personal, non-commercial use, you must keep intact all copyright and other proprietary notices. You may not otherwise reproduce or distribute any of the Content of the Site without our prior authorization. Of course, you’re free to encourage others to access the information themselves on our Site and to tell them how to find it.</string>

    <string name="privacy_text">This Privacy Policy discloses the privacy practices for the NCCAA website located at <a href="www.nccaa.org">www.nccaa.org</a> (the “Site”). In this Privacy Policy, the terms “we,” “us,” or “our” refer to NCCAA, and the terms “you” and “your” refer to you as a visitor to the Site.This Privacy Policy governs our collection of information from you through your use of this Site. It does not apply to any information you may provide to us, or that we may collect, offline and/or through other means (for example, information gathered via mail or telephone). By visiting and using this Site, you agree that your use of this Site, and any disputes over our online privacy practices, will be governed by this Privacy Policy and or Terms of Use.</string>
    <string name="privacy_text2">The types of information collected on our Site are described below. This information may be collected directly by us, or it may be collected by our third party website hosting provider, or another service provider, on our behalf. No personally identifiable information (such as your name, address, email address, or telephone number) is automatically collected via our Site; personally identifiable information about Site users is collected only when it is knowingly and voluntarily submitted by Site visitors.</string>
    <string name="privacy_text3">We may collect and store information, personal or otherwise, that you voluntarily supply to us while on our Site. Some examples of this type of information include information that you submit electronically when you contact us with questions or request email updates or RSS feeds, and information you post on public posting areas on our Site (such as the comment feature for news articles and updates). We may also ask for information (including a credit or debit card number) from those who pay for an NCCAA membership, pay NCCAA Certification fees, or conduct other transactions on our Site.This category of information also includes information that you electronically submit when you submit an NCCAA membership application, or an NCCAA Certification application, via our Site. All information voluntarily supplied by you via our Site as part of the NCCAA membership application process and/or the NCCAA Certification process will be collected and stored by us in accordance with the terms of this Privacy Policy.</string>

    <string name="notice_text">If you are an NCCAA member, you can make changes to your account information by logging in to the Restricted Access Areas of our Site and clicking on “Update Your Details/Change Password.” When you update your account or profile information, we may keep a copy of the prior version for our records.If at any point you decide that you would no longer like to receive information from us, please use the contact information set forth below in the “Contact Us” section of this policy to contact us to request that we remove your information from our database.</string>
    <string name="notice_text2">This Site is not directed to children under the age of 13 and we do not knowingly collect personally identifiable information from children under the age of 13. If we become aware that we have inadvertently received personally identifiable information from a user under the age of 13, we will delete such information from our records. Because we do not collect any personally identifiable information from children under the age of 13, we also do not knowingly distribute any such information to third parties. We do not knowingly allow children under the age of 13 to publicly post or otherwise distribute personally identifiable contact information.</string>
    <string name="notice_text3">If we need to change this Privacy Policy in the future, we will post the modified Privacy Policy on the Site and update the “Last Updated” date of the policy to reflect the date of the changes. By continuing to use the Site after we post any such changes, you accept the Privacy Policy as modified.</string>
    <string name="notice_text4">If you have any questions about this policy or our privacy practices, please click on the “Contact NCCAA” link on our website and complete the online form to submit your question or inquiry.</string>

    <string name="psi_form_text">PSI Mandatory Data Form</string>
    <string name="psi_mandatory_text">Per our announcement, NCCAA has transitioned <br />from NBME to a new testing administrator, PSI. In <br />order to fulfill PSI’s registration <u><font color="#4D85F0">requirements</font></u> , the <br />following information must be provided to <br />maintain compliance with certification. </string>

    <string name="take_photo">Take Photo</string>
    <string name="gallary">Choose From Gallery</string>
    <string name="select_option">Select Option</string>
    <string name="document">Document</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_enable">Go to settings and enable permissions</string>
    <string name="please_wait">Please wait</string>
    <string name="file_size">File size is not more than 10 MB.</string>
    <string name="simulations">Simulations</string>

</resources>